<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_map"
        android:title="@string/action_map"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_submit_grave"
        android:title="@string/action_submit_grave"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_my_submissions"
        android:title="@string/action_my_submissions"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
</menu>
